[package]
name = "opensrv-clickhouse"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Bindings for emulating a ClickHouse server."
readme = "README.md"

[lib]
doctest = false
test = false

[features]
default = ["tokio_io"]
tls = ["tokio-native-tls"]
tokio_io = ["tokio"]

[dependencies]
async-trait = "0.1.52"
byteorder = "1.4.3"
bytes = "1.1.0"
chrono = { version = "0.4.19", default-features = false, features = ["std"] }
chrono-tz = "0.6.1"
combine = "4.6.3"
futures = "0.3.21"
futures-core = "0.3.21"
futures-sink = "0.3.21"
futures-util = { version = "0.3.21", features = ["sink"] }
hostname = "0.3.1"
lz4 = "1.23.2"
naive-cityhash = "0.2.0"
once_cell = "1.9.0"

thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"], optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-stream = "0.1.8"
tracing = "0.1.31"
url = "2.2.2"
uuid = "0.8.2"

[dev-dependencies]
rand = "0.8.5"
