[package]
name = "opensrv-clickhouse"
version = "0.2.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Bindings for emulating a ClickHouse server."
readme = "README.md"
repository = "https://github.com/datafuselabs/opensrv"
keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

[lib]
doctest = false
test = false

[features]
tls = ["tokio-native-tls"]

[dependencies]
async-trait = "0.1.52"
byteorder = "1.4.3"
bytes = "1.1.0"
chrono = { version = "0.4.19", default-features = false, features = ["std"] }
chrono-tz = "0.6.1"
combine = "4.6.3"
hostname = "0.3.1"
lz4 = "1.23.2"
micromarshal = { version = "0.2.0" , path = "../components/micromarshal"}
naive-cityhash = "0.2.0"
once_cell = "1.9.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-stream = "0.1.8"
tracing = "0.1.31"
url = "2.2.2"
uuid = "1.1.0"

[dev-dependencies]
futures = "0.3.21"
futures-core = "0.3.21"
futures-sink = "0.3.21"
futures-util = { version = "0.3.21", features = ["sink"] }
rand = "0.8.5"
