[package]
name = "opensrv-mysql"
version = "0.2.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Bindings for emulating a MySQL/MariaDB server."
readme = "README.md"
repository = "https://github.com/datafuselabs/opensrv"
keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

[lib]
doctest = false

[dependencies]
async-trait = "0.1.52"
byteorder = "1.4.3"
chrono = "0.4.19"
mysql_common = { version = "0.29.0", features = ["chrono"] }
nom = "7.1.0"
tokio = { version = "1.17.0", features = ["io-util", "io-std"] }

[dev-dependencies]
mysql = "22.0.0"
mysql_async = "0.30.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[[example]]
name = "serve_auth"
path = "examples/serve_auth.rs"

[[example]]
name = "serve_one"
path = "examples/serve_one.rs"
