[package]
name = "opensrv-mysql"
version = "0.7.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Bindings for emulating a MySQL/MariaDB server."
readme = "README.md"
repository = "https://github.com/datafuselabs/opensrv"
keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

[lib]
doctest = false

[features]
default = ["tls"]
tls = ["tokio-rustls", "pin-project-lite"]

[dependencies]
async-trait = "0.1.52"
byteorder = "1.4.3"
chrono = "0.4.20"
mysql_common = { version = "0.32.0", features = ["chrono"] }
nom = "7.1.0"
tokio = { version = "1.17.0", features = ["io-util", "io-std"] }
tokio-rustls = { version = "0.25", optional = true }
pin-project-lite = { version = "0.2.9", optional = true }

[dev-dependencies]
mysql = "=24.0.0"
mysql_async = "=0.31.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rcgen = "0.12"
tempfile = "3.3.0"
native-tls = "0.2.8"
rustls-pemfile = { version = "2.0" }
rustls-pki-types = "1.0"

[[example]]
name = "serve_auth"
path = "examples/serve_auth.rs"

[[example]]
name = "serve_one"
path = "examples/serve_one.rs"

[[example]]
name = "serve_secure"
path = "examples/serve_secure.rs"
