[package]
name = "micromarshal"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
description = "(De)Serialisation between Rust values and binary byte objects. "
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dev-dependencies]
rand = "0.8.5"
