[package]
name = "micromarshal"
version = "0.4.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
description = "(De)Serialisation between Rust values and binary byte objects. "
readme = "README.md"
repository = "https://github.com/datafuselabs/opensrv"
categories = ["emulators", "encoding", "parser-implementations", "parsing"]
keywords = ["marshal", "read", "decode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ordered-float = "3.1.0"
ethnum = "1.3"

[dev-dependencies]
rand = "0.8.5"
